--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,8 @@ header .navbar-brand {
   text-transform: uppercase;
   letter-spacing: .2em;
   font-weight: 400;
-  color: #fff !important;
+  color: #444 !important;
+  padding:0.25rem 0.75rem;
 }
 
 header .navbar-collapse {
@@ -45,19 +46,19 @@ header .navbar-collapse {
 header .navbar {
   padding-top: 0;
   padding-bottom: 0;
-  background: transparent !important;
+  background: rgba(255, 255, 255, 1)!important;
 }
 
 @media (max-width: 991.98px) {
   header .navbar {
-    background: rgba(0, 0, 0, 0.4) !important;
+    background: rgba(255, 255, 255, 1) !important;
     padding-top: .5rem;
     padding-bottom: .5rem;
   }
 }
 
 header .navbar .container {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 header .navbar .navbar-nav.absolute-right {
@@ -85,23 +86,23 @@ header .navbar .nav-link {
 }
 
 header .navbar .nav-link:hover {
-  color: #fff !important;
+  color: #444 !important;
 }
 
 header .navbar .nav-link.active {
-  color: #fff !important;
+  color: #EB0105 !important;
 }
 
 header .navbar .dropdown.show > a {
-  color: #fff !important;
+  color: #444 !important;
 }
 
 header .navbar .dropdown-menu {
   font-size: 14px;
   border-radius: 0px;
   border: none;
-  -webkit-box-shadow: 0 2px 30px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 2px 30px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 2px 30px 0px rgba(255, 255,255, 0.2);
+  box-shadow: 0 2px 30px 0px rgba(255, 255, 255, 0.2);
   min-width: 13em;
   margin-top: -10px;
 }
@@ -143,11 +144,11 @@ header .navbar .dropdown-menu a {
 }
 
 header .navbar.navbar-light .nav-link {
-  color: #fff;
+  color: #444;
 }
 
 header .navbar.navbar-light .nav-link.active {
-  color: #fff;
+  color: #444;
 }
 
 .site-hero {
